--- a/module3/maven-simple/pom.xml
+++ b/module3/maven-simple/pom.xml
@@ -8,4 +8,19 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>maven-simple</name>
+    <build>
+	<plugins>     
+	<plugin>
+ 	  <groupId>org.apache.maven.plugins</groupId>
+ 	  <artifactId>maven-jar-plugin</artifactId>
+  	 <configuration>
+   	    <archive>
+       		    <manifest>
+         	      <mainClass>com.test.Test</mainClass>
+        	   </manifest>
+      	 </archive>
+  	 </configuration>
+  	 </plugin>
+	 </plugins>
+</build>
 </project>
