--- a/module3/maven-simple/pom.xml
+++ b/module3/maven-simple/pom.xml
@@ -8,4 +8,9 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>maven-simple</name>
+    <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
+
 </project>
