--- a/module3/maven-simple/pom.xml
+++ b/module3/maven-simple/pom.xml
@@ -18,18 +18,21 @@
         <url>http://localhost:8081/repository/maven-napshots/</url>
       </snapshotRepository>
     </distributionManagement>
-    <plugin>
-      <artifactId>maven-deploy-plugin</artifactId>
-      <version>2.8.1</version>
-      <executions>
-         <execution>
-            <id>default-deploy</id>
-            <phase>deploy</phase>
-            <goals>
-               <goal>deploy</goal>
-            </goals>
-         </execution>
-      </executions>
-    </plugin>
-
+    <build>
+      <plugins>
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.1</version>
+          <executions>
+             <execution>
+                <id>default-deploy</id>
+                <phase>deploy</phase>
+                <goals>
+                   <goal>deploy</goal>
+                </goals>
+             </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
 </project>
