--- a/module3/maven-simple/pom.xml
+++ b/module3/maven-simple/pom.xml
@@ -21,6 +21,17 @@
     <build>
       <plugins>
         <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.6.3</version>
+          <extensions>true</extensions>
+          <configuration>
+              <serverId>nexus</serverId>
+              <nexusUrl>http://localhost:8081/</nexusUrl>
+          </configuration>
+        </plugin>
+
+        <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.1</version>
           <executions>
