--- a/module3/maven-simple/pom.xml
+++ b/module3/maven-simple/pom.xml
@@ -15,7 +15,7 @@
     <distributionManagement>
       <snapshotRepository>
         <id>nexus</id>
-        <url>http://localhost:8081/repository/maven-napshots/</url>
+        <url>http://172.28.128.7:8081/repository/maven-napshots/</url>
       </snapshotRepository>
     </distributionManagement>
     <build>
@@ -27,7 +27,7 @@
           <extensions>true</extensions>
           <configuration>
               <serverId>nexus</serverId>
-              <nexusUrl>http://localhost:8081/</nexusUrl>
+              <nexusUrl>http://172.28.128.7:8081/</nexusUrl>
           </configuration>
         </plugin>
 
